[package]
name = "tcp_echo_server_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "tcp_server"
path = "src/tcp_server.rs"

[[bin]]
name = "tcp_client"
path = "src/tcp_client.rs"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
