[package]
name = "tcp_echo_server_rust"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
time = { version = "0.3.25" }

[[bin]]
name = "tcp_server"
path = "src/tcp_server.rs"

[[bin]]
name = "tcp_client"
path = "src/tcp_client.rs"

[[bin]]
name = "udp_client"
path = "src/udp_client.rs"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
